--- a/bio.html
+++ b/bio.html
@@ -49,7 +49,7 @@
 
         <img src="eu.jpg" alt="Foto de João da Silva">
 
-        <aside>
+        <aside class="navegacao-site">
             <h1>João da Silva</h1>
             <nav>
                 <ul>
@@ -60,9 +60,20 @@
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
+            <ul class="icones-redes-sociais">
+                <li>
+                    <a href="https://github.com/git-joaodasilva" class="github">Github</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/twitter-joaodasilva" class="twitter">Twitter</a>
+                </li>
+                <li>
+                    <a href="https://br.linkedin.com/pub/linkedin-joao-da-silva/32/4/508" class="linkedin">LinkedIn</a>
+                </li>
+            </ul>
         </aside>
 
-        <footer>
+        <footer id="rodape-pagina">
             © João da Silva 2014
         </footer>
     </body>
